feat(iscb): 强化服务流程校验与 Java 8 运行时