@@ -3,6 +3,7 @@ package local.iscb.runtime;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -20,8 +21,8 @@ public final class ScriptRuntimeMain {
 		}
 
 		String command = args[0];
-		String scriptText = Files.readString(Path.of(args[1]), StandardCharsets.UTF_8);
-		Map<String, Object> bindings = args.length >= 3 ? readBindings(Path.of(args[2])) : new HashMap<String, Object>();
+		String scriptText = readUtf8(Paths.get(args[1]));
+		Map<String, Object> bindings = args.length >= 3 ? readBindings(Paths.get(args[2])) : new HashMap<String, Object>();
 
 		if ("compile".equals(command)) {
 			LifeScriptEngine.setNow();
@@ -44,7 +45,7 @@ public final class ScriptRuntimeMain {
 
 	@SuppressWarnings("unchecked")
 	private static Map<String, Object> readBindings(Path path) throws Exception {
-		String text = Files.readString(path, StandardCharsets.UTF_8);
+		String text = readUtf8(path);
 		if (text.trim().isEmpty()) {
 			return new HashMap<String, Object>();
 		}
@@ -57,5 +58,9 @@ public final class ScriptRuntimeMain {
 			return new HashMap<String, Object>((Map<String, Object>) parsed);
 		}
 		throw new IllegalArgumentException("Bindings JSON must be an object.");
+	}
+
+	private static String readUtf8(Path path) throws Exception {
+		return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
 	}
 }
